--- a/src/styles.css
+++ b/src/styles.css
@@ -1006,6 +1006,15 @@ a.obs-popup-species {
   line-height: 1;
 }
 
+.obs-popup-location {
+  font-size: 0.72rem;
+  line-height: 1.35;
+  color: #334155;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .obs-popup-checklist {
   margin: 0.1rem 0 0;
   padding-left: 1rem;
